--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,10 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
-        <!-- Conector MySQL -->
+        <!-- Conector PostgreSQL -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
 
@@ -62,6 +62,7 @@
             <version>1.18.30</version>
             <scope>provided</scope>
         </dependency>
+
         <!-- Testing -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -74,6 +75,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
 
 
     <build>
