--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,16 @@
 spring.application.name=Tienda
-spring.datasource.url=jdbc:mysql://localhost:3306/tienda_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=Proverbios22:6_EL_4DM1N
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# URL de conexión PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/tienda_db
+# Usuario/contraseña de PostgreSQL (ajústalos a tu instalación)
+spring.datasource.username=postgres
+spring.datasource.password=0000
+# Driver PostgreSQL
+spring.datasource.driver-class-name=org.postgresql.Driver
+# JPA + Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+# Dialecto específico para PostgreSQL
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+# Esquema por defecto
+spring.jpa.properties.hibernate.default_schema=tienda
