terminado avances proyecto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Tienda
 # URL de conexión PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/tienda_db
+spring.datasource.url=jdbc:postgresql://localhost:5432/tienda
 # Usuario/contraseña de PostgreSQL (ajústalos a tu instalación)
 spring.datasource.username=postgres
 spring.datasource.password=0000
