app propper changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,18 @@
+# Nombre de la aplicación
 spring.application.name=Tienda
-# URL de conexión PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/tienda
-# Usuario/contraseña de PostgreSQL (ajústalos a tu instalación)
-spring.datasource.username=postgres
-spring.datasource.password=0000
-# Driver PostgreSQL
+
+# Conexión a PostgreSQL (usar variables de entorno)
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DATABASE_USER}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-# JPA + Hibernate
-spring.jpa.hibernate.ddl-auto=update
+
+# Configuración JPA / Hibernate
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
-# Dialecto específico para PostgreSQL
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-# Esquema por defecto
-spring.jpa.properties.hibernate.default_schema=tienda
+spring.jpa.properties.hibernate.default_schema=${DB_SCHEMA:tienda}
+
+# Render asigna el puerto dinámicamente
+server.port=${PORT:8080}
