--- a/pom.xml
+++ b/pom.xml
@@ -1,34 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.5.4</version>
-        <relativePath/> <!-- lookup parent from repository -->
+        <relativePath/>
     </parent>
+
     <groupId>co.edu.unbosque</groupId>
     <artifactId>Tienda</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>Tienda</name>
     <description>Tienda</description>
-    <url/>
-    <licenses>
-        <license/>
-    </licenses>
-    <developers>
-        <developer/>
-    </developers>
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
+
     <properties>
         <java.version>17</java.version>
     </properties>
+
     <dependencies>
         <!-- Web (controladores REST y vistas Thymeleaf) -->
         <dependency>
@@ -55,7 +47,7 @@
             <scope>runtime</scope>
         </dependency>
 
-        <!-- Lombok (para getters/setters/constructores automáticos) -->
+        <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -76,10 +68,10 @@
         </dependency>
     </dependencies>
 
-
-
     <build>
         <plugins>
+
+            <!-- Compilador -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
@@ -96,6 +88,8 @@
                     </annotationProcessorPaths>
                 </configuration>
             </plugin>
+
+            <!-- GraphQL Codegen (opcional, ajustado a carpeta estándar) -->
             <plugin>
                 <groupId>io.github.deweyjose</groupId>
                 <artifactId>graphqlcodegen-maven-plugin</artifactId>
@@ -108,7 +102,8 @@
                         </goals>
                         <configuration>
                             <schemaPaths>
-                                <param>src/main/resources/graphql-client</param>
+                                <!-- Cambiado de graphql-client a graphql -->
+                                <param>src/main/resources/graphql</param>
                             </schemaPaths>
                             <packageName>co.edu.unbosque.tienda.codegen</packageName>
                             <addGeneratedAnnotation>true</addGeneratedAnnotation>
@@ -117,6 +112,8 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Agregar las fuentes generadas al classpath -->
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>build-helper-maven-plugin</artifactId>
@@ -135,10 +132,14 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Native build (opcional) -->
             <plugin>
                 <groupId>org.graalvm.buildtools</groupId>
                 <artifactId>native-maven-plugin</artifactId>
             </plugin>
+
+            <!-- Spring Boot plugin -->
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -151,6 +152,7 @@
                     </excludes>
                 </configuration>
             </plugin>
+
         </plugins>
     </build>
 
